test/fixtures/diagnostics/type-checker/positive/shift-assignment-expression/input.tysh
namespace Samples.TypeChecker.ShiftAssignmentExpression

fun adjustInt(value: int, count: ushort): int {
  let mut result = value
  result <<= count
  result >>= 1
  result
}

fun adjustUnsigned(value: uint, count: int): uint {
  let mut result = value
  result >>= count
  result <<= 1
  result
}

fun adjustLong(value: long, count: short): long {
  let mut result = value
  result <<= count
  result >>= 2
  result
}

fun adjustSmall(value: byte, count: int): byte {
  let mut result = value
  result <<= count
  result >>= 1
  result
}
